Fix: Logo cutting off Explorer
`.page-title.logo` was cutting off the bottom of the Explorer as the logo's image element was too large. Removed margins and reduced size from 240x210 to 200x175.

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -9,3 +9,7 @@
 @use "./custom/maintenance-template-callout.scss";
 
 // put your custom CSS here!
+
+.page-title {
+    height: 175px;
+}
